# PorosityFE

./: .gitignore  CHANGELOG.md  CITATION.cff  DEPLOYMENT_STREAMLIT.md  MANIFEST.in  PorosityFE.spec  README.md  app.py  conftest.py  porosity_fe_analysis.py  porosity_gui.py  pyproject.toml  requirements-test.txt  requirements.txt  validate_porosity_cli.py
.github/workflows/: build-executables.yml  docs.yml  security.yml  tests.yml
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst
examples/: README.md  clustered_midplane.py  compute_degraded_clt_moduli.py  discrete_voids.py  distribution_comparison.py  interface_penny.py  uniform_spherical.py
porosity_fe/: __init__.py  _ply_angles.py  _style.py  cli.py  empirical.py  fatigue.py  gauss.py  homogenization.py  io.py  materials.py  mesh.py  pipeline.py  porosity_field.py  reporting.py  results.py  transforms.py  uq.py  viz.py  void_geometry.py
porosity_fe/fe/: __init__.py  assembler.py  element.py  solver.py
tests/: test_porosity_fe.py  test_results_schema_roundtrip.py  test_validation_database.py
validation/: validate_all.py  validation_detail_report.md
validation/schemas/: porosity_results_schema.json
